fixed bug where text box wasnt being selected when canvas overflowed

--- a/css/figure-builder.css
+++ b/css/figure-builder.css
@@ -153,7 +153,8 @@ button {
 
 .canvas {
    position: absolute;
-   top: 0px;;
+   top: 0px;
+   left: 10px;
 }
 
 
